# DC-Agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  main.py  pyproject.toml  runtime_bootstrap.py  start-all.sh
dc_engines/: pyproject.toml
dc_engines/dc_engines/: __init__.py  assistant_distillation.py  card_runtime.py  card_system.py  media_sop.py  obsidian_review.py
dc_engines/dc_engines/ai_inbox/: __init__.py  contracts.py  engine.py  store.py
dc_engines/dc_engines/alert_channel/: README.md  __init__.py  __main__.py  client.py  config.py
dc_engines/dc_engines/case/: __init__.py  archiver.py
dc_engines/dc_engines/company_cognition/: __init__.py  backfill.py  contracts.py  health.py  memory_matrix.py
dc_engines/dc_engines/department_workflows/: __init__.py  catalog.py  channel_policy.py  (+8 more)
dc_engines/tests/: conftest.py  harness_sensor_plugin_truth_intake_test.py  test_ai_inbox.py  test_assistant_distillation.py  test_case_aggregation.py  test_channel_policy.py  test_chat_creator_plugin.py  test_company_cognition.py  test_concierge_identity.py  test_content_sop_context.py  test_content_sop_quality_gate.py  test_department_memory_profiles.py  test_department_workflows.py  test_employee_directory.py  test_employee_memory_bridge.py  test_feishu_hub.py  test_feishu_sync.py  test_harness_lifecycle.py  test_harness_sensor_plugin.py  test_media_sop.py  test_memory_governance_store.py  test_obsidian_memory_codec.py  test_obsidian_memory_export_import.py  test_obsidian_memory_governance_cli.py  test_obsidian_memory_promotion.py  test_obsidian_review.py
(+377 files in other folders)
