[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-engines"
version = "0.1.0"
description = "DC-Agent business engines (harness, case, group_summary, ...) — kept outside AstrBot core to survive upstream upgrades cleanly."
requires-python = ">=3.12"
dependencies = [
  # Cross-package types we lean on (already installed by AstrBot's editable install)
  # Kept loose so installs from a fresh venv still work.
  "aiosqlite>=0.21.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-xdist>=3.0,<4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dc_engines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
